<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="82dp"
        android:layout_height="272dp"
        android:src="@android:drawable/ic_dialog_map" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/True" />

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/False" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cheat" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next" />
    </LinearLayout>

</LinearLayout>